--- a/stacks-encoding-native-js/Cargo.toml
+++ b/stacks-encoding-native-js/Cargo.toml
@@ -16,6 +16,7 @@ stacks_common = { package = "stacks-common", path = "../stacks-blockchain/stacks
 clarity = { package = "clarity", path = "../stacks-blockchain/clarity/." }
 stacks = { package = "blockstack-core", path = "../stacks-blockchain/." }
 hex = "0.4"
+serde_json = "1.0"
 
 [target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
 sha2 = { version = "0.10", features = ["asm"] }
