--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,12 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-stacks_common = { package = "stacks-common", path = "../stacks-blockchain/stacks-common/." }
-clarity = { package = "clarity", path = "../stacks-blockchain/clarity/." }
-stacks = { package = "blockstack-core", path = "../stacks-blockchain/." }
+stacks_common = { package = "stacks-common", path = "./stacks-blockchain/stacks-common/." }
+clarity = { package = "clarity", path = "./stacks-blockchain/clarity/." }
+stacks = { package = "blockstack-core", path = "./stacks-blockchain/." }
 hex = "0.4"
 serde_json = "1.0"
+git-version = "0.3.5"
 
 [target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
 sha2 = { version = "0.10", features = ["asm"] }
