--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-stacks_common = { package = "stacks-common", path = "./stacks-blockchain/stacks-common/." }
-clarity = { package = "clarity", path = "./stacks-blockchain/clarity/." }
-stacks = { package = "blockstack-core", path = "./stacks-blockchain/." }
+# Use stacks-blockchain develop branch (commit hash as of 2022-03-01)
+stacks-common = { git = "https://github.com/stacks-network/stacks-blockchain", rev = "d82f467a9b265027905522fb3391860ec2a160e3" }
+clarity = { git = "https://github.com/stacks-network/stacks-blockchain", rev = "d82f467a9b265027905522fb3391860ec2a160e3" }
+blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain", rev = "d82f467a9b265027905522fb3391860ec2a160e3" }
+
 hex = "0.4"
 serde_json = "1.0"
 git-version = "0.3.5"
