chore: remove git submodule init from package.json script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
     "build-debug": "npm run build --",
     "build-release": "npm run build -- --release",
-    "install": "git pull --recurse-submodules && npm run build-release",
+    "install": "npm run build-release",
     "test": "cargo test"
   },
   "author": "",
