fix: use npx for invoking npm package binaries during install

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test desc 12345",
   "main": "index.node",
   "scripts": {
-    "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
+    "build": "npx cargo-cp-artifact@^0.1 -nc index.node -- cargo build --message-format=json-render-diagnostics",
     "build-debug": "npm run build --",
     "build-release": "npm run build -- --release",
     "install": "npm run build-release",
