ci: npm install before building

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install deps
         run: apk add alpine-sdk git nodejs npm
+      - name: npm i
+        run: npm i
       - name: Build
         run: npm run build
       - uses: actions/upload-artifact@v2
@@ -30,6 +32,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - name: npm i
+        run: npm i
       - name: Build
         run: npm run build
       - uses: actions/upload-artifact@v2
@@ -47,6 +51,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - name: npm i
+        run: npm i
       - name: Build
         run: npm run build
       - uses: actions/upload-artifact@v2
@@ -64,6 +70,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - name: npm i
+        run: npm i
       - name: Build
         run: npm run build
       - uses: actions/upload-artifact@v2
@@ -86,6 +94,8 @@ jobs:
         run: |
           echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
           echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
+      - name: npm i
+        run: npm i
       - name: Build
         run: npm run build
       - uses: actions/upload-artifact@v2
