ci: attempt linux-arm64-musl build, try number 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: uraimo/run-on-arch-action@v2
-        name: Build artifact
-        id: build
+      - name: Run on architecture
+        uses: uraimo/run-on-arch-action@v2.1.1
         with:
           arch: aarch64
           distro: alpine_latest
