ci: attempt linux-arm64-musl build, try number 3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
             mkdir -p "${PWD}/artifacts"
           dockerRunArgs: |
             --volume "${PWD}/artifacts:/artifacts"
-          shell: /bin/ash
+          # shell: /bin/ash
           install: |
             apk update
             apk add alpine-sdk git nodejs npm rustup
@@ -63,8 +63,6 @@ jobs:
           run: |
             npm run build-cargo
             cp native/linux-arm64-musl.node /artifacts/.
-            cp $(which git) "/artifacts/${artifact_name}"
-            echo "Produced artifact at /artifacts/${artifact_name}"
       - name: Show the artifact
         # Items placed in /artifacts in the container will be in
         # ${PWD}/artifacts on the host.
