--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,9 +58,13 @@ jobs:
             apk add alpine-sdk git nodejs npm rustup
             rustup-init -y
             source $HOME/.cargo/env
+            echo "[install] current dir: $(pwd)"
+            echo ls -al .
             npm i
           # Produce a binary artifact and place it in the mounted volume
           run: |
+            echo "[run] current dir: $(pwd)"
+            echo ls -al .
             npm run build-cargo
             cp native/linux-arm64-musl.node /artifacts/.
       - name: Show the artifact
