--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
             mkdir -p "${PWD}/artifacts"
           dockerRunArgs: |
             --volume "${PWD}/artifacts:/artifacts"
-          # shell: /bin/ash
+          shell: /bin/ash
           install: |
             apk update
             apk add alpine-sdk git nodejs npm rustup
