ci: attempt linux-arm64-musl build, try number 11

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
             source $HOME/.cargo/env
             npm i
             cargo --version
-            npm run build-cargo
+            cargo build --release
             cp native/linux-arm64-musl.node /artifacts/.
       - name: Show the artifact
         # Items placed in /artifacts in the container will be in
