--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,11 @@ on:
       npm-package-tag:
         description: Specify the tag to be used for npm publish, e.g. `latest`, `beta`, `alpha`
         required: true
+      include-linux-arm64-musl:
+        description: 'Build the linux-arm64-musl artifact, can take up to 2 hours'
+        required: true 
+        type: boolean
+        default: true
 
 jobs:
   cancel-previous-runs:
@@ -39,6 +44,7 @@ jobs:
           if-no-files-found: error
 
   build_linux-arm64-musl:
+    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.include-linux-arm64-musl}}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
