--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,11 +44,14 @@ jobs:
           if-no-files-found: error
 
   build_linux-arm64-musl:
-    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.include-linux-arm64-musl == 'true' }}
     runs-on: ubuntu-latest
+    env:
+      INCLUDE_BUILD: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.include-linux-arm64-musl == 'true' }}
     steps:
       - uses: actions/checkout@v2
+        if: ${{ env.INCLUDE_BUILD == 'true' }}
       - name: Run on architecture
+        if: ${{ env.INCLUDE_BUILD == 'true' }}
         uses: uraimo/run-on-arch-action@v2.1.1
         with:
           arch: aarch64
@@ -68,11 +71,8 @@ jobs:
             source $HOME/.cargo/env
             cargo build --release
             cp target/release/libstacks_encoding_native_js.so /artifacts/linux-arm64-musl.node
-      - name: Show the artifact
-        # Items placed in /artifacts in the container will be in ${PWD}/artifacts on the host.
-        run: |
-          ls -al "${PWD}/artifacts"
       - uses: actions/upload-artifact@v2
+        if: ${{ env.INCLUDE_BUILD == 'true' }}
         with:
           name: linux-arm64-musl
           path: artifacts/linux-arm64-musl.node
