--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -227,14 +227,14 @@ jobs:
 
   npm-package:
     runs-on: ubuntu-latest
-    # needs:
-    #   - build_linux-x64-musl
-    #   - build_linux-arm64-musl
-    #   - build_linux-x64-glibc
-    #   - build_linux-arm64-glibc
-    #   - build_win-x64
-    #   - build_darwin-x64
-    #   - build_darwin-arm64
+    needs:
+      - build_linux-x64-musl
+      - build_linux-arm64-musl
+      - build_linux-x64-glibc
+      - build_linux-arm64-glibc
+      - build_win-x64
+      - build_darwin-x64
+      - build_darwin-arm64
     env:
       NPM_PACKAGE_VERSION: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.npm-package-version || '0.0.1-alpha.0' }}
       NPM_PACKAGE_TAG: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.npm-package-tag || 'alpha' }}
@@ -270,7 +270,7 @@ jobs:
           path: stacks-encoding-native-js.tgz
           if-no-files-found: error
       - name: Publish npm package
-        # if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'workflow_dispatch'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish stacks-encoding-native-js.tgz --tag $NPM_PACKAGE_TAG --access public
