--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,11 @@ clarity = { git = "https://github.com/stacks-network/stacks-blockchain", rev = "
 blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain", rev = "d82f467a9b265027905522fb3391860ec2a160e3" }
 
 hex = "0.4"
+regex = "1.5"
 serde_json = "1.0"
 git-version = "0.3.5"
+lazy_static = "1.4.0"
+unicode-segmentation = "1.9.0"
 
 [target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
 sha2 = { version = "0.10", features = ["asm"] }
