--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build-cargo": "node build.js",
     "build-ts": "tsc",
     "build": "npm run build-ts && npm run build-cargo",
+    "build:dev": "npm run build-ts && npm run build-cargo -- dev",
     "test": "cargo test"
   },
   "author": "Matthew Little",
