--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ stacks-common = { git = "https://github.com/stacks-network/stacks-blockchain", b
 clarity = { git = "https://github.com/stacks-network/stacks-blockchain", branch = "feat/c32-optimizations" }
 blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain", branch = "feat/c32-optimizations" }
 
-hex-simd = { version = "0.5.0", features = ["unstable"] }
-simd-abstraction = { version = "0.5.0", features = ["alloc", "std", "unstable"] }
+hex-simd = { version = "0.5.0" }
+simd-abstraction = { version = "0.5.0", features = ["alloc", "std"] }
 regex = "1.5"
 serde_json = "1.0"
 git-version = "0.3.5"
