--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ serde_json = "1.0"
 git-version = "0.3.5"
 lazy_static = "1.4.0"
 unicode-segmentation = "1.9.0"
+rand = "0.8.5"
 
 [dependencies.pprof]
 # git = "https://github.com/YangKeao/pprof-rs"
