--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "build:dev": "npm run build-ts && npm run build-cargo -- dev",
     "test": "cargo test",
     "perf-test:contract-call-args": "node --expose-gc perf-tests/decode-contract-call-args/test.js",
-    "perf-test:decode-post-conditions": "node --expose-gc perf-tests/decode-post-conditions/test.js"
+    "perf-test:decode-post-conditions": "node --expose-gc perf-tests/decode-post-conditions/test.js",
+    "perf-test:encode-stx-address": "node perf-tests/encode-stx-address/test.js",
+    "perf-test:decode-stx-address": "node perf-tests/decode-stx-address/test.js"
   },
   "author": "Matthew Little",
   "license": "GPL-3.0",
   "devDependencies": {
     "cargo-cp-artifact": "^0.1",
+    "open": "^8.4.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
