--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules
 target
 index.js
 index.d.ts
+perf-tests/decode-stx-address/results
+perf-tests/decode-post-conditions/results
+perf-tests/encode-stx-address/results
+perf-tests/decode-contract-call-args/results
