--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build-ts": "tsc",
     "build": "npm run build-ts && npm run build-cargo",
     "build:dev": "npm run build-ts && npm run build-cargo -- dev",
-    "test": "cargo test",
+    "test:cargo": "cargo test",
+    "test:js": "jest",
+    "test": "npm run test:js",
     "perf-test:contract-call-args": "node --expose-gc perf-tests/decode-contract-call-args/test.js",
     "perf-test:decode-post-conditions": "node --expose-gc perf-tests/decode-post-conditions/test.js",
     "perf-test:encode-stx-address": "node perf-tests/encode-stx-address/test.js",
@@ -17,12 +19,24 @@
   "author": "Matthew Little",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "cargo-cp-artifact": "^0.1",
+    "jest": "^27.5.1",
     "open": "^8.4.0",
-    "typescript": "^4.6.2"
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@types/node": "^16.11.26",
     "detect-libc": "^2.0.1"
+  },
+  "files": [
+    "native/**/*",
+    "index.*"
+  ],
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": ["<rootDir>/tests"]
   }
 }
