--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,6 @@ crate-type = ["cdylib"]
 hex-simd = { version = "0.5.0" }
 simd-abstraction = { version = "0.5.0", features = ["alloc", "std"] }
 regex = "1.5"
-serde_json = "1.0"
 git-version = "0.3.5"
 lazy_static = "1.4.0"
 unicode-segmentation = "1.9.0"
@@ -54,4 +53,5 @@ features = ["napi-6"]
 flate2 = "1.0.22"
 
 [features]
+default = ["profiling"]
 profiling = ["pprof"]
